--- a/src/app/components/hero-banner/hero-banner.component.css
+++ b/src/app/components/hero-banner/hero-banner.component.css
@@ -13,3 +13,14 @@ section {
     }
   }
 }
+
+@media screen and (max-width: 1200px) {
+  img {
+    display: none;
+  }
+
+  .container {
+    justify-content: center;
+    align-items: center;
+  }
+}
